k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guild
  namespace: guild
  labels:
    app: guild
spec:
  type: ClusterIP
  selector:
    app: guild
  ports:
    - port: 80
      targetPort: 80
